--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>KidsConnect</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -18,16 +18,16 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
@@ -46,43 +46,39 @@
 
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../images/hikeLogo.png" height="36">
-                HoCa Hikes</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../aboutus.html">About Us</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <a class="btn btn-outline-success" href="../login.html">Login</a>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">KidsConnect</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/html/index.html">Home <span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Messages</a>
+                <a class="nav-item nav-link" href="#">Search</a>
+                <a class="nav-item nav-link" href="#">Calendar</a>
+                <a class="nav-item nav-link" href="#">Notifications</a>
             </div>
         </div>
     </nav>
 
     <!-- the body of your page goes here -->
-         <!-- the body of your page goes here -->
-<div class="container text-center py-4">
-    <div class="rounded-circle overflow-hidden">
-        <img class="responsive" src="./images/elmo.jpg" alt="">
+    <div id="banner">
+        <h1 id="welcome_message">Welcome<br>to<br>KidsConnect</h1>
     </div>
-    <h1>Welcome to HoCa's Hiking App</h1>
-    <a href="login.html" class="btn btn-warning" role="button">Log in</a>
-</div>
-    <!-- stuff -->
 
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
+    <div id="buttons">
+        <a href="login.html"><button>Log In</button></a>
+        <button>Sign Up</button>
+    </div>
+
+    <footer class="bg-light text-center py-3">
+        <div class="container">
+            <p class="mb-0 text-muted small">2024 KidsConnect</p>
+        </div>
+    </footer>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
