--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>KidsConnect</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -53,26 +53,20 @@
     <!------------------------------>
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../images/hikeLogo.png" height="36">
-                HoCa Hikes</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../aboutus.html">About Us</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <a class="btn btn-outline-success" href="../login.html">Login</a>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">KidsConnect</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/html/index.html">Home <span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Messages</a>
+                <a class="nav-item nav-link" href="#">Search</a>
+                <a class="nav-item nav-link" href="#">Calendar</a>
+                <a class="nav-item nav-link" href="#">Notifications</a>
             </div>
         </div>
     </nav>
@@ -85,8 +79,11 @@
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
 
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
+    <footer class="bg-light text-center py-3">
+        <div class="container">
+            <p class="mb-0 text-muted small">2024 KidsConnect</p>
+        </div>
+    </footer>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
