--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>KidsConnect</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -18,16 +18,16 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
@@ -40,26 +40,61 @@
 </head>
 
 <body>
+    <!-- Templates for general use, not displayed -->
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem">
+            <img class="card-image card-img-top" src=" ..." alt="..." />
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-length">placeholder</p>
+                <br />
+                <p class="card-text">
+                    Some quick example text to build on the card title and make up the
+                    bulk of the card's content.
+                </p>
+                <a class="btn btn-primary card-href">Read more ...</a>
+            </div>
+        </div>
+    </template>
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
 
     <!-- our own navbar goes here -->
-    <nav id="navbarPlaceholder"></nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">KidsConnect</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/html/index.html">Home <span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Messages</a>
+                <a class="nav-item nav-link" href="#">Search</a>
+                <a class="nav-item nav-link" href="#">Calendar</a>
+                <a class="nav-item nav-link" href="#">Notifications</a>
+            </div>
+        </div>
+    </nav>
 
 
-
-    <!-- the body of your page goes here -->
-    <div class="container-fluid bg-light text-dark p-5">
-    <div class="container bg-light p-5">
-    <h1 class="display-4">You are loged in to HoCa Hike app, <span id="name-goes-here"></span></h1>
-    <hr>
-    <p>Stay healthy with HoCa Hikes</p>
+    <div class="container-fluid text-dark p-5" style="background-color:  rgb(246, 190, 199);">
+        <div class="container bg-light p-5">
+            <h1 class="display-4">You are logged in to KidsConnect, <span id="name-goes-here"></span></h1>
+            <hr>
+            <p>Keep your kids connected here!</p>
+        </div>
     </div>
-    </div>
 
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
+
+
+    <footer class="bg-light text-center py-3">
+        <div class="container">
+            <p class="mb-0 text-muted small">2024 KidsConnect</p>
+        </div>
+    </footer>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
@@ -67,7 +102,7 @@
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/main.js"></script>
-   <!-- <script src="./scripts/script.js"></script> -->
+    <!-- <script src="./scripts/script.js"></script> -->
 </body>
 
 </html>
