--- a/eachHike.html
+++ b/eachHike.html
@@ -35,7 +35,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
 </head>
 
@@ -43,42 +43,17 @@
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
-
-
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="./images/hikeLogo.png" height="36">
-                Parvaneh's Hikes</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../aboutus.html">About Us</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <a class="btn btn-outline-success" href="../login.html">Login</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+
+
 
     <!-- the body of your page goes here -->
-         <!-- the body of your page goes here -->
-<div class="container text-center py-4">
-    <div class="rounded-circle overflow-hidden">
-        <img class="responsive" src="./images/elmo.jpg" alt="">
-    </div>
-    <h1>Welcome to Parvaneh's Hiking App</h1>
-    <a href="login.html" class="btn btn-warning" role="button">Log in</a>
-</div>
+    <div class="container">
+        <h1><span id="hikeName"> this hike</span></h1>
+        <img class="hike-img responsive" src=""/>
+        <div id="details-go-here"></div>
+  </div>
     <!-- stuff -->
 
     <!-- our own footer goes here-->
@@ -89,11 +64,9 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/eachHike.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
 
-    <script>
-        logout();       //make sure user is logged out
-    </script>
 </body>
 
 </html>
