--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>KidsConnect</title>
+    <title>My BCIT Project</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -60,41 +60,30 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
 
-    <!-- our own navbar goes here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">KidsConnect</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/html/index.html">Home <span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Messages</a>
-                <a class="nav-item nav-link" href="#">Search</a>
-                <a class="nav-item nav-link" href="#">Calendar</a>
-                <a class="nav-item nav-link" href="#">Notifications</a>
-            </div>
-        </div>
-    </nav>
+       <!-- our own navbar goes here -->
+       <nav id="navbarPlaceholder"></nav>
 
 
-    <div class="container-fluid text-dark p-5" style="background-color:  rgb(246, 190, 199);">
+
+
+    <!-- the body of your page goes here -->
+    <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">You are logged in to KidsConnect, <span id="name-goes-here"></span></h1>
+            <h1 class="display-4">Good morning, <span id="name-goes-here"></span></h1>
             <hr>
-            <p>Keep your kids connected here!</p>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
     </div>
-
-
-
-    <footer class="bg-light text-center py-3">
+    <div class="container">
+        <h1>Some popular hikes</h1>
+        <!-- Here is the container for cards  -->
         <div class="container">
-            <p class="mb-0 text-muted small">2024 KidsConnect</p>
+            <div id="hikes-go-here" class="row row-cols-auto">
+            </div>
         </div>
-    </footer>
+    </div>
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
