--- a/index.html
+++ b/index.html
@@ -72,15 +72,29 @@
 
     <!-- the body of your page goes here -->
          <!-- the body of your page goes here -->
-<div class="container text-center py-4">
+<!-- <div class="container text-center py-4">
     <div class="rounded-circle overflow-hidden">
         <img class="responsive" src="./images/elmo.jpg" alt="">
     </div>
     <h1>Welcome to Parvaneh's Hiking App</h1>
     <a href="login.html" class="btn btn-warning" role="button">Log in</a>
-</div>
+</div> -->
     <!-- stuff -->
-
+    <div class="px-4 pt-5 my-5 text-center border-bottom">
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="images/elmo.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
+                    width="200" height="200" loading="lazy">
+            </div>
+        </div>
+        <h1 class="display-4 fw-bold">Welcome to Parvaneh's hikes</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Here's a fun and practical application about the trails. You can het so much infrmation through it.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Login</button>
+            </div>
+        </div>
+</div>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
